--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.10.1",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
