--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ckeditor/ckeditor5-build-decoupled-document": "^40.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.18.1",
@@ -20,6 +21,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "react-moment": "^1.1.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
@@ -29,7 +31,8 @@
     "recharts": "^2.10.1",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
